# SPDX-FileCopyrightText: 2022 Gerry Agbobada <git@gagbo.net>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "ok-picker"
version = "0.0.2"
edition = "2021"
license = "GPL-3.0-only"
default-run = "ok-picker"
homepage = "https://github.com/gagbo/ok-picker"
repository = "https://github.com/gagbo/ok-picker"
description = "A color picker application focused on colorscheming in Ok colorspace (from Björn Ottosson)"

[[bin]]
name = "ok-picker"
test = false
bench = false

[[bin]]
name = "ok-picker-wasm"
test = false
bench = false

[dependencies]
eframe = "0.19.0"
ndarray = "0.15.6"
once_cell = "1.15.0"
